--- a/github/workflows/phpstan.yml
+++ b/github/workflows/phpstan.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        presta-versions: ['1.6.0.3', '1.6.1.0', '1.7.2.4', '1.7.3.3', '1.7.4.2', '1.7.5.1', '1.7.6.5'] #, 'latest']
+        presta-versions: ['1.7.6.5'] # ['1.6.0.3', '1.6.1.0', '1.7.2.4', '1.7.3.3', '1.7.4.2', '1.7.5.1', '1.7.6.5', 'latest']
     steps:
       # Check the PrestaShop we want to run is included in the compatibility range
       - name: Define a boolean variable saying if the test can run
