--- a/github/workflows/compliance-get-reports.yml
+++ b/github/workflows/compliance-get-reports.yml
@@ -37,7 +37,7 @@ jobs:
               --header "Connection: keep-alive" \
               --header 'Accept: application/json' \
               --header "Accept: */*" \
-              --header "Authorization:Bearer ${{ steps.get_oauth_token.outputs.TOKEN }}" \
+              --oauth2-bearer ${{ steps.get_oauth_token.outputs.TOKEN }} \
               --output status.json
               jq --color-output . status.json | less -R
 
@@ -71,12 +71,14 @@ jobs:
             --output token.json
           echo $(cat token.json)
           echo TOKEN=$(cat token.json | jq -c .access_token) >> $GITHUB_OUTPUT
+      - name: init service name
+        id: init_service_name
+        run: |
+          echo SERVICE_NAME=$(echo ${{ matrix.services }} | sed -e "s/-api$//") >> $GITHUB_OUTPUT
       - name: get-report for ${{ matrix.services }}
         run: |
-          curl --location --request GET "${{ secrets.COMPLIANCE_BASE_URI }}/$(echo ${{ matrix.services }} | sed -e "s/-api$//" )/v1/report?technicalName=${{ inputs.technicalName }}&version=${{ inputs.version }}" \
-            --header "Connection: keep-alive" \
+          curl --location --request GET "${{ secrets.COMPLIANCE_BASE_URI }}/${{ steps.init_service_name.outputs.SERVICE_NAME }}/v1/report?technicalName=${{ inputs.technicalName }}&version=${{ inputs.version }}" \
             --header 'Accept: application/json' \
-            --header "Accept: */*" \
-            --header "Authorization:Bearer ${{ steps.get_oauth_token.outputs.TOKEN }}" \
+            --oauth2-bearer ${{ steps.get_oauth_token.outputs.TOKEN }} \
             --output report.json
           jq --color-output . report.json | less -R
