--- a/github/workflows/compliance-get-reports.yml
+++ b/github/workflows/compliance-get-reports.yml
@@ -17,19 +17,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Get OAUTH token from oauth.prestashop.com
+          uses: ./../../actions/auth-compliance
           id: get_oauth_token
-          run: |
-            curl --location --request POST "${{ secrets.OAUTH_TOKEN_URI }}" \
-              --cookie "${{ secrets.OAUTH_COOKIE }}" \
-              --header "Content-Type: application/x-www-form-urlencoded" \
-              --data-urlencode 'client_id=${{ secrets.OAUTH_CLIENT_ID }}' \
-              --data-urlencode 'client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}' \
-              --data-urlencode 'grant_type=${{ secrets.OAUTH_GRANT_TYPE }}' \
-              --data-urlencode 'audience=${{ secrets.OAUTH_AUDIENCE }}' \
-              --data-urlencode 'scope=${{ secrets.OAUTH_SCOPE }}' \
-              --output token.json
-              echo $(cat token.json)
-              echo TOKEN=$(cat token.json | jq -c .access_token) >> $GITHUB_OUTPUT
+          with:
+            token-uri: ${{ secrets.OAUTH_TOKEN_URI }}
+            cookie: ${{ secrets.OAUTH_COOKIE }}
+            client-id: ${{ secrets.OAUTH_CLIENT_ID }}
+            client-secret: ${{ secrets.OAUTH_CLIENT_SECRET }}
+            grant-type: ${{ secrets.OAUTH_GRANT_TYPE }}
+            audience: ${{ secrets.OAUTH_AUDIENCE }}
+            scope: ${{ secrets.OAUTH_SCOPE }}
         - name: get-status
           id: get_status
           run: |
@@ -58,19 +55,16 @@ jobs:
             services: '${{ fromJSON(needs.get-status.outputs.services).services }}' 
     steps:
       - name: Get OAUTH token from oauth.prestashop.com
+        uses: ./../../actions/auth-compliance
         id: get_oauth_token
-        run: |
-          curl --location --request POST "${{ secrets.OAUTH_TOKEN_URI }}" \
-            --cookie "${{ secrets.OAUTH_COOKIE }}" \
-            --header "Content-Type: application/x-www-form-urlencoded" \
-            --data-urlencode 'client_id=${{ secrets.OAUTH_CLIENT_ID }}' \
-            --data-urlencode 'client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}' \
-            --data-urlencode 'grant_type=${{ secrets.OAUTH_GRANT_TYPE }}' \
-            --data-urlencode 'audience=${{ secrets.OAUTH_AUDIENCE }}' \
-            --data-urlencode 'scope=${{ secrets.OAUTH_SCOPE }}' \
-            --output token.json
-          echo $(cat token.json)
-          echo TOKEN=$(cat token.json | jq -c .access_token) >> $GITHUB_OUTPUT
+        with:
+          token-uri: ${{ secrets.OAUTH_TOKEN_URI }}
+          cookie: ${{ secrets.OAUTH_COOKIE }}
+          client-id: ${{ secrets.OAUTH_CLIENT_ID }}
+          client-secret: ${{ secrets.OAUTH_CLIENT_SECRET }}
+          grant-type: ${{ secrets.OAUTH_GRANT_TYPE }}
+          audience: ${{ secrets.OAUTH_AUDIENCE }}
+          scope: ${{ secrets.OAUTH_SCOPE }}
       - name: init service name
         id: init_service_name
         run: |
