feat(compliance): exit 0

--- a/actions/auth-compliance/actions.yml
+++ b/actions/auth-compliance/actions.yml
@@ -39,3 +39,4 @@ runs:
           --data-urlencode 'scope=${{ inputs.scope }}' \
           --output token.json
         echo TOKEN=$(cat token.json | jq -c .access_token) >> $GITHUB_OUTPUT
+        exit 0
