--- a/github/workflows/compliance-send.yml
+++ b/github/workflows/compliance-send.yml
@@ -10,16 +10,15 @@ jobs:
             - name: Get repo name
               id: get_repo_name
               run: |
-                echo REPO_NAME=$(echo ${{ github.workspace }} | cut -d / -f 5) >> $GITHUB_OUTPUT
+                echo REPO_NAME=$(echo ${{ github.workspace }} | cut -d / -f 5) >> $GITHUB_OUTPUT && exit 0
             - name: Get branch name
               id: get_branch_name
               run: |
-                echo BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}} >> $GITHUB_OUTPUT
+                echo BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}} >> $GITHUB_OUTPUT && exit 0
             - name: Zip Folder
               run: |
                 cd ..
-                zip -r -q module.zip ${{ steps.get_repo_name.outputs.REPO_NAME }} -x module.zip 
-                exit 0
+                zip -r -q module.zip ${{ steps.get_repo_name.outputs.REPO_NAME }} -x module.zip && exit 0
             - name: Get OAUTH token from oauth.prestashop.com
               uses: ./../../actions/auth-compliance
               id: get_oauth_token
@@ -48,6 +47,5 @@ jobs:
                     --form 'callback[headers][1][1]="2022-11-28"' \
                     --form 'callback[headers][2][0]="Authorization"' \
                     --form 'callback[headers][2][1]="Bearer ${{ secrets.PAT }}"' \
-                    --output scan.json 
-                jq --color-output . scan.json | less -R
-                exit 0
+                    --output scan.json && exit 0
+                jq --color-output . scan.json | less -R && exit 0
