--- a/actions/auth-compliance/action.yml
+++ b/actions/auth-compliance/action.yml
@@ -37,5 +37,5 @@ runs:
           --data-urlencode 'grant_type=${{ inputs.grant-type }}' \
           --data-urlencode 'audience=${{ inputs.audience }}' \
           --data-urlencode 'scope=${{ inputs.scope }}' \
-          --output token.json && exit 0
-        echo TOKEN=$(cat token.json | jq -c .access_token) >> $GITHUB_OUTPUT && exit 0
+          --output token.json
+        echo TOKEN=$(cat token.json | jq -c .access_token) >> "$GITHUB_OUTPUT"
