--- a/github/workflows/compliance-get-reports.yml
+++ b/github/workflows/compliance-get-reports.yml
@@ -1,5 +1,8 @@
 name: ComplianceGetReports
 on:
+  workflow_run:
+    workflows: [ComplianceSendModule]
+    types: [completed]
   workflow_dispatch:
     inputs:
       version:
@@ -31,18 +34,18 @@ jobs:
         - name: get-status
           id: get_status
           run: |
+            if [[ -z "$inputs.technicalName" ]]; then echo "Reports not ready yet." >&2; exit 1; fi;
             curl --location --request GET "${{ secrets.COMPLIANCE_BASE_URI }}/orchestrator/v1/status?technicalName=${{ inputs.technicalName }}&version=${{ inputs.version }}" \
               --header "Connection: keep-alive" \
               --header 'Accept: application/json' \
               --header "Accept: */*" \
               --oauth2-bearer ${{ steps.get_oauth_token.outputs.token }} \
-              --output status.json && exit 0
-              jq --color-output . status.json | less -R && exit 0
-
+              --output status.json
+            jq --color-output . status.json | less -R 
             # Generate Matrix
-            services=( $(jq -r '.servicesStatus[].service' status.json) ) && exit 0
-            json=$(jq --compact-output --null-input '$ARGS.positional' --args -- "${services[@]}") && exit 0
-            echo services="{\"services\":$json}" >> $GITHUB_OUTPUT && exit 0
+            services=( $(jq -r '.servicesStatus[].service' status.json) )
+            json=$(jq --compact-output --null-input '$ARGS.positional' --args -- "${services[@]}")
+            echo "services={\"services\":$json}" >> $GITHUB_OUTPUT
     outputs:
       services: ${{ steps.get_status.outputs.services }}  
 
@@ -55,6 +58,7 @@ jobs:
         matrix:
             services: '${{ fromJSON(needs.get-status.outputs.services).services }}' 
     steps:
+      - uses: actions/checkout@v3
       - name: Get OAUTH token from oauth.prestashop.com
         uses: ./actions/auth-compliance
         id: get_oauth_token
@@ -69,11 +73,13 @@ jobs:
       - name: init service name
         id: init_service_name
         run: |
-          echo SERVICE_NAME=$(echo ${{ matrix.services }} | sed -e "s/-api$//") >> $GITHUB_OUTPUT && exit 0
+          if [[ -z "$inputs.technicalName" ]]; then echo "Reports not ready yet." >&2; exit 1; fi;
+          echo SERVICE_NAME=$(echo ${{ matrix.services }} | sed -e "s/-api$//") >> $GITHUB_OUTPUT
       - name: get-report for ${{ matrix.services }}
         run: |
+          if [[ -z "$inputs.technicalName" ]]; then echo "Reports not ready yet." >&2; exit 1; fi;
           curl --location --request GET "${{ secrets.COMPLIANCE_BASE_URI }}/${{ steps.init_service_name.outputs.SERVICE_NAME }}/v1/report?technicalName=${{ inputs.technicalName }}&version=${{ inputs.version }}" \
             --header 'Accept: application/json' \
             --oauth2-bearer ${{ steps.get_oauth_token.outputs.token }} \
-            --output report.json && exit 0
-          jq --color-output . report.json | less -R && exit 0
+            --output report.json
+          jq --color-output . report.json | less -R 
