--- a/github/workflows/compliance-get-reports.yml
+++ b/github/workflows/compliance-get-reports.yml
@@ -1,8 +1,7 @@
 name: ComplianceGetReports
 on:
-  workflow_run:
-    workflows: [ComplianceSendModule]
-    types: [completed]
+  pull_request:
+    types: [opened, reopened]
   workflow_dispatch:
     inputs:
       version:
@@ -18,6 +17,7 @@ jobs:
   get-status:
     name: get status
     runs-on: ubuntu-latest
+    if: ${{ inputs.technicalName != '' }}
     steps:
         - uses: actions/checkout@v3
         - name: Get OAUTH token from oauth.prestashop.com
@@ -34,7 +34,6 @@ jobs:
         - name: get-status
           id: get_status
           run: |
-            if [[ -z "$inputs.technicalName" ]]; then echo "Reports not ready yet." >&2; exit 1; fi;
             curl --location --request GET "${{ secrets.COMPLIANCE_BASE_URI }}/orchestrator/v1/status?technicalName=${{ inputs.technicalName }}&version=${{ inputs.version }}" \
               --header "Connection: keep-alive" \
               --header 'Accept: application/json' \
@@ -57,6 +56,7 @@ jobs:
     strategy:
         matrix:
             services: '${{ fromJSON(needs.get-status.outputs.services).services }}' 
+    if: ${{ inputs.technicalName != '' }}
     steps:
       - uses: actions/checkout@v3
       - name: Get OAUTH token from oauth.prestashop.com
@@ -73,11 +73,9 @@ jobs:
       - name: init service name
         id: init_service_name
         run: |
-          if [[ -z "$inputs.technicalName" ]]; then echo "Reports not ready yet." >&2; exit 1; fi;
           echo SERVICE_NAME=$(echo ${{ matrix.services }} | sed -e "s/-api$//") >> $GITHUB_OUTPUT
       - name: get-report for ${{ matrix.services }}
         run: |
-          if [[ -z "$inputs.technicalName" ]]; then echo "Reports not ready yet." >&2; exit 1; fi;
           curl --location --request GET "${{ secrets.COMPLIANCE_BASE_URI }}/${{ steps.init_service_name.outputs.SERVICE_NAME }}/v1/report?technicalName=${{ inputs.technicalName }}&version=${{ inputs.version }}" \
             --header 'Accept: application/json' \
             --oauth2-bearer ${{ steps.get_oauth_token.outputs.token }} \
