--- a/github/workflows/compliance-get-reports.yml
+++ b/github/workflows/compliance-get-reports.yml
@@ -101,6 +101,10 @@ jobs:
             --oauth2-bearer ${{ steps.get_oauth_token.outputs.token }} \
             --output report.json
           jq --color-output . report.json | less -R 
+      - name: Report Security in PDF
+        if: ${{ steps.init_service_name.outputs.SERVICE_NAME == 'ps-security-api' }}
+        run: |
+          echo "https://api.compliance.prestashop.com/ps-security/v1/report?version=${{ steps.get_version.outputs.match }}&technicalName=$TECHNICAL_NAMEtype=Pdf"
   get-report-top-sellers:
     name: report compatible with top sellers
     runs-on: ubuntu-latest  
